--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div class="btn-box">
                 
-                <a href="img/Venkateshjoshi'sresume(1).pdf" target="_blank" class="btn d-CV">Download Resume <i class='bx bx-download'></i></a>
+                <a href="img/Venkateshjoshi's(2)resume.pdf" target="_blank" class="btn d-CV">Download Resume <i class='bx bx-download'></i></a>
             </div>
 
             <div class="social-media">
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="cvContent">
-                <a href="img/Venkateshjoshi'sresume(1).pdf" target="_blank" class="btn d-CV">Download Resume <i class='bx bx-download'></i></a>
+                <a href="img/Venkateshjoshi's(2)resume.pdf" target="_blank" class="btn d-CV">Download Resume <i class='bx bx-download'></i></a>
             </div>
         </div>
     </section>
